fix minor UI issues; eg overflow on mobile

--- a/web/src/components/Search/Search.css
+++ b/web/src/components/Search/Search.css
@@ -1,6 +1,6 @@
 .schoolListing .reviewOverallScore {
 	position: absolute;
-	right: 50px;
+	right: 30px;
 	width: 50px;
 	height: 50px;
 	border: 3px solid #3F44B5;
@@ -15,7 +15,7 @@
 }
 .schoolListing .reviewTotalNumText {
 	position: absolute;
-	right: 47px;
+	right: 27px;
 	font-size: 12px;
 	top: 70px;
 }
